# automodelcar-cic-ipn

./: .gitignore  README.md  compile.bash  play_bag.bash  start.bash  update_car.bash
devel/: .catkin  .rosinstall  setup.sh
devel/lib/cic/: ImageProcessing  node
devel/lib/pkgconfig/: cic.pc
devel/share/cic/cmake/: cicConfig.cmake
src/cic/: CMakeLists.txt  package.xml
src/cic/launch/: camera_adjustment.launch  full.launch
src/cic/msg/: Intersection.msg  Lane.msg  Master.msg
src/cic/src/nodes/CrossingDetection/: CrossingDetection.cpp  CrossingDetection.h
src/cic/src/nodes/ImageProcessing/: ImageProcessing.cpp  ImageProcessing.py
src/cic/src/nodes/LaneDetection/: LaneDetection.cpp  LaneDetection.h  LocMax_pw.cpp
src/cic/src/nodes/Master/: Master.py  master_module.py
